--- a/static_in_env/css/main.css
+++ b/static_in_env/css/main.css
@@ -1107,8 +1107,9 @@ li.sale-noti > a {
 
 .side-menu .sub-menu > li {
   padding-left: 12px;
-  padding-top: 
+  padding-top: 1px
 }
+
 
 .side-menu .sub-menu a:hover {
   text-decoration: none;
