--- a/static_root/css/main.css
+++ b/static_root/css/main.css
@@ -1107,7 +1107,7 @@ li.sale-noti > a {
 
 .side-menu .sub-menu > li {
   padding-left: 12px;
-  padding-top: 
+  padding-top: 1px
 }
 
 .side-menu .sub-menu a:hover {
