--- a/templates/about.html
+++ b/templates/about.html
@@ -332,7 +332,11 @@
         <ul class="timeline">
           <li>
             <div class="timeline-image">
-              <img class="rounded-circle img-fluid" src="{% static 'images/online-shopping-concept-shopping-cart-with-bags-and-big-computer-screen-flat-design-isolated-on-blue-background-free-vector.jpg' %}" alt="..." />
+              <img
+                class="rounded-circle img-fluid"
+                src="{% static 'images/online-shopping-concept-shopping-cart-with-bags-and-big-computer-screen-flat-design-isolated-on-blue-background-free-vector.jpg' %}"
+                alt="..."
+              />
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
