--- a/templates/category.html
+++ b/templates/category.html
@@ -21,7 +21,7 @@
 </style>
 
 	<!-- Title Page -->
-	<section class="bg-title-page p-t-50 p-b-40 flex-col-c-m category-image">
+	<section class="bg-title-page p-t-50 p-b-40 flex-col-c-m category-image" style="background-image: url(/static/images/Holiday-1920x240.webp)">
 	</section>
 		<h2 class="l-text2 t-center">
 			{{ category_title }}
