--- a/templates/shop.html
+++ b/templates/shop.html
@@ -21,7 +21,7 @@
 </style>
 
 	<!-- Title Page -->
-	<section class="bg-title-page p-t-50 p-b-40 flex-col-c-m" style="background-image: url(/static/images/heading-pages-02.jpg)	;">
+	<section class="bg-title-page p-t-50 p-b-40 flex-col-c-m" style="background-image: url(/static/images/Holiday-1920x240.webp)	;">
 		<h2 class="l-text2 t-center">
 			Shop
 		</h2>
