--- a/templates/404.html
+++ b/templates/404.html
@@ -1,4 +1,4 @@
-{% load static %}
+<!-- {% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -56,5 +56,355 @@
       <p class="error-message">Page Not Found</p>
       <p class="animated-text">Searching for the missing page...</p>
     </div>
+  </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-1752YPLP7H"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-1752YPLP7H");
+    </script>
+
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css?family=Audiowide");
+      @import url("https://fonts.googleapis.com/css?family=Roboto+Mono");
+      /* ---- reset ---- */
+      body {
+        margin: 0;
+        font: normal 75% Arial, Helvetica, sans-serif;
+      }
+      canvas {
+        display: block;
+        /* Remove the vertical-align property */
+      }
+      /* ---- tsparticles container ---- */
+      .github {
+        bottom: 10px;
+        right: 10px;
+        position: fixed;
+        border-radius: 10px;
+        background: #fff;
+        padding: 0 12px 6px 12px;
+        border: 1px solid #000;
+      }
+
+      .github a:hover,
+      .github a:link,
+      .github a:visited,
+      .github a:active {
+        color: #000;
+        text-decoration: none;
+      }
+
+      .github img {
+        height: 30px;
+      }
+
+      .github #gh-project {
+        font-size: 20px;
+        padding-left: 5px;
+        font-weight: bold;
+        vertical-align: bottom;
+      }
+      .textContainer {
+        position: absolute;
+        color: white;
+      }
+      #tsparticles {
+        z-index: 0;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        margin: 0;
+      }
+      section {
+        position: absolute;
+        width: 100%;
+        text-align: center;
+        color: white;
+      }
+      section h1 {
+        font-family: "Audiowide", sans-serif;
+        font-size: 11rem;
+        margin: 0%;
+        margin-top: 4rem;
+      }
+      section h2 {
+        font-family: "Roboto Mono", sans-serif;
+        font-size: 2rem;
+        margin: 0%;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- tsParticles container -->
+    <div id="tsparticles"></div>
+    <section class="text">
+      <h1>404</h1>
+      <h2>Maybe you're lost or you are an imposter👻</h2>
+    </section>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"
+    ></script>
+    <script src="tsparticles.engine.min.js"></script>
+    <script>
+      // https://codepen.io/matteobruni/pen/rNmMVEx
+      tsParticles.load("tsparticles", {
+        fullScreen: {
+          enable: true,
+        },
+        fpsLimit: 60,
+        particles: {
+          groups: {
+            z5000: {
+              number: {
+                value: 70,
+              },
+              zIndex: {
+                value: 5000,
+              },
+            },
+            z7500: {
+              number: {
+                value: 30,
+              },
+              zIndex: {
+                value: 75,
+              },
+            },
+            z2500: {
+              number: {
+                value: 50,
+              },
+              zIndex: {
+                value: 25,
+              },
+            },
+            z1000: {
+              number: {
+                value: 40,
+              },
+              zIndex: {
+                value: 10,
+              },
+            },
+          },
+          number: {
+            value: 200,
+            density: {
+              enable: false,
+              value_area: 800,
+            },
+          },
+          color: {
+            value: "#fff",
+            animation: {
+              enable: false,
+              speed: 20,
+              sync: true,
+            },
+          },
+          shape: {
+            type: "circle",
+          },
+          opacity: {
+            value: 1,
+            random: false,
+            animation: {
+              enable: false,
+              speed: 3,
+              minimumValue: 0.1,
+              sync: false,
+            },
+          },
+          size: {
+            value: 3,
+          },
+          links: {
+            enable: false,
+            distance: 100,
+            color: "#ffffff",
+            opacity: 0.4,
+            width: 1,
+          },
+          move: {
+            angle: {
+              value: 10,
+              offset: 0,
+            },
+            enable: true,
+            speed: 5,
+            direction: "right",
+            random: false,
+            straight: true,
+            outModes: {
+              default: "out",
+            },
+            attract: {
+              enable: false,
+              rotateX: 600,
+              rotateY: 1200,
+            },
+          },
+          zIndex: {
+            value: 5,
+            opacityRate: 0.5,
+          },
+        },
+        interactivity: {
+          detectsOn: "canvas",
+          events: {
+            onHover: {
+              enable: false,
+              mode: "repulse",
+            },
+            onClick: {
+              enable: true,
+              mode: "push",
+            },
+            resize: true,
+          },
+          modes: {
+            grab: {
+              distance: 400,
+              links: {
+                opacity: 1,
+              },
+            },
+            bubble: {
+              distance: 400,
+              size: 40,
+              duration: 2,
+              opacity: 0.8,
+            },
+            repulse: {
+              distance: 200,
+            },
+            push: {
+              quantity: 4,
+              groups: ["z5000", "z7500", "z2500", "z1000"],
+            },
+            remove: {
+              quantity: 2,
+            },
+          },
+        },
+        detectRetina: true,
+        background: {
+          color: "#000000",
+          image: "",
+          position: "50% 50%",
+          repeat: "no-repeat",
+          size: "cover",
+        },
+        emitters: {
+          position: {
+            y: 55,
+            x: -30,
+          },
+          rate: {
+            delay: 7,
+            quantity: 1,
+          },
+          size: {
+            width: 0,
+            height: 0,
+          },
+          particles: {
+            shape: {
+              type: "images",
+              options: {
+                images: [
+                  {
+                    src: "https://particles.js.org/images/amongus_blue.png",
+                    width: 205,
+                    height: 267,
+                  },
+                  {
+                    src: "https://particles.js.org/images/amongus_cyan.png",
+                    width: 207,
+                    height: 265,
+                  },
+                  {
+                    src: "https://particles.js.org/images/amongus_green.png",
+                    width: 204,
+                    height: 266,
+                  },
+                  {
+                    src: "https://particles.js.org/images/amongus_lime.png",
+                    width: 206,
+                    height: 267,
+                  },
+                  {
+                    src: "https://particles.js.org/images/amongus_orange.png",
+                    width: 205,
+                    height: 265,
+                  },
+                  {
+                    src: "https://particles.js.org/images/amongus_pink.png",
+                    width: 205,
+                    height: 265,
+                  },
+                  {
+                    src: "https://particles.js.org/images/amongus_red.png",
+                    width: 204,
+                    height: 267,
+                  },
+                  {
+                    src: "https://particles.js.org/images/amongus_white.png",
+                    width: 205,
+                    height: 267,
+                  },
+                ],
+              },
+            },
+            size: {
+              value: 40,
+            },
+            move: {
+              speed: 10,
+              outModes: {
+                default: "destroy",
+                left: "none",
+              },
+              straight: true,
+            },
+            zIndex: {
+              value: 0,
+            },
+            rotate: {
+              value: {
+                min: 0,
+                max: 360,
+              },
+              animation: {
+                enable: true,
+                speed: 10,
+                sync: true,
+              },
+            },
+          },
+        },
+      });
+    </script>
   </body>
 </html>
