--- a/templates/nav.html
+++ b/templates/nav.html
@@ -78,7 +78,7 @@
             </li>
             {% else %}
             <li>
-              <a href="{% url 'core:aboutus' %}">About Us</a>
+              <a href="{% url 'core:about_us' %}">About Us</a>
             </li>
             <li>
               <a href="#">Login</a>
