--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -80,7 +80,8 @@
             <select class="custom-select d-block w-100" id="state" required>
               <option value="">Choose...</option>
               <option>California</option>
-              <option>Yangon</option>
+              <option>Turkey</option>
+              <option>Baku</option>
 
             </select>
             <div class="invalid-feedback">
