--- a/templates/nav.html
+++ b/templates/nav.html
@@ -74,7 +74,7 @@
               >
             </li>
             <li>
-              <a href="">Logout</a>
+              <a href="{% url 'core:logout' %}">Logout</a>
             </li>
             {% else %}
             <li>
